--- a/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
+++ b/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
@@ -4,6 +4,9 @@
     <DebugType>Full</DebugType>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Package.nuspec" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.91635" />
     <PackageReference Include="LagoVista.Core" Version="1.2.181-alpha1716" />
     <PackageReference Include="LagoVista.Client.Core" Version="1.2.185-alpha0705" />
