--- a/src/LagoVista.XPlat.Core/Package.nuspec
+++ b/src/LagoVista.XPlat.Core/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>LagoVista.XPlat.Core</id>
-    <version>1.2.185-alpha0705</version>
+    <version>1.2.186-alpha0806</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -17,6 +17,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\release\LagoVista.XPlat.Core.dll" target="lib\netstandard1.2" />
+    <file src="bin\release\netstandard1.3\LagoVista.XPlat.Core.dll" target="lib\netstandard1.3" />
   </files>
 </package>
