--- a/src/LagoVista.XPlat.iOS/Package.nuspec
+++ b/src/LagoVista.XPlat.iOS/Package.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <metadata>
-    <id>LagoVista.Core.UWP</id>
+    <id>LagoVista.XPlat.iOS</id>
     <version>1.2.205-alpha1737</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
@@ -17,13 +17,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\ARM\Release\LagoVista.Core.UWP.dll" target="runtimes\win10-arm\lib\uap10.0" />
-    <file src="bin\ARM\Release\LagoVista.Core.UWP.pri" target="runtimes\win10-arm\lib\uap10.0" />
-    <file src="bin\x64\Release\LagoVista.Core.UWP.dll" target="runtimes\win10-x64\lib\uap10.0" />
-    <file src="bin\x64\Release\LagoVista.Core.UWP.pri" target="runtimes\win10-x64\lib\uap10.0" />
-    <file src="bin\x86\Release\LagoVista.Core.UWP.dll" target="runtimes\win10-x86\lib\uap10.0" />
-    <file src="bin\x86\Release\LagoVista.Core.UWP.pri" target="runtimes\win10-x86\lib\uap10.0" />
-    <file src="bin\Release\LagoVista.Core.UWP.dll" target="ref\uap10.0" />
-    <file src="bin\Release\Assets\Fonts\*.*" target="Assets\Fonts" />
+    <file src="bin\Release\LagoVista.XPlat.iOS.dll" target="lib\Xamarin.iOS10" />
   </files>
 </package>
