--- a/src/LagoVista.XPlat.UWP/Package.nuspec
+++ b/src/LagoVista.XPlat.UWP/Package.nuspec
@@ -17,13 +17,13 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\ARM\Release\LagoVista.UWP.UI.dll" target="runtimes\win10-arm\lib\uap10.0" />
-    <file src="bin\ARM\Release\LagoVista.UWP.UI.pri" target="runtimes\win10-arm\lib\uap10.0" />
-    <file src="bin\x64\Release\LagoVista.UWP.UI.dll" target="runtimes\win10-x64\lib\uap10.0" />
-    <file src="bin\x64\Release\LagoVista.UWP.UI.pri" target="runtimes\win10-x64\lib\uap10.0" />
-    <file src="bin\x86\Release\LagoVista.UWP.UI.dll" target="runtimes\win10-x86\lib\uap10.0" />
-    <file src="bin\x86\Release\LagoVista.UWP.UI.pri" target="runtimes\win10-x86\lib\uap10.0" />
-    <file src="bin\Release\LagoVista.UWP.UI.dll" target="ref\uap10.0" />
-    <file src="bin\Release\LagoVista.UWP.UI.pri" target="ref\uap10.0" />
+    <file src="bin\ARM\Release\LagoVista.XPlat.UWP.dll" target="runtimes\win10-arm\lib\uap10.0" />
+    <file src="bin\ARM\Release\LagoVista.XPlat.UWP.pri" target="runtimes\win10-arm\lib\uap10.0" />
+    <file src="bin\x64\Release\LagoVista.XPlat.UWP.dll" target="runtimes\win10-x64\lib\uap10.0" />
+    <file src="bin\x64\Release\LagoVista.XPlat.UWP.pri" target="runtimes\win10-x64\lib\uap10.0" />
+    <file src="bin\x86\Release\LagoVista.XPlat.UWP.dll" target="runtimes\win10-x86\lib\uap10.0" />
+    <file src="bin\x86\Release\LagoVista.XPlat.UWP.pri" target="runtimes\win10-x86\lib\uap10.0" />
+    <file src="bin\Release\LagoVista.XPlat.UWP.dll" target="ref\uap10.0" />
+    <file src="bin\Release\LagoVista.XPlat.UWP.pri" target="ref\uap10.0" />
   </files>
 </package>
