break into os based projects

--- a/src/LagoVista.UWP.UI/project.json
+++ b/src/LagoVista.UWP.UI/project.json
@@ -1,11 +1,11 @@
 ﻿{
   "dependencies": {
-    "LagoVista.Client.Core": "1.2.195-alpha1354",
+    "LagoVista.Client.Core": "1.2.205-alpha1737",
     "LagoVista.Core": "1.2.181-alpha1716",
     "LagoVista.Core.Authentication": "1.2.181-alpha1716",
     "LagoVista.Core.Networking": "1.2.181-alpha1716",
     "Microsoft.NETCore.UniversalWindowsPlatform": "6.0.4",
-    "Newtonsoft.Json": "10.0.3"
+    "Newtonsoft.Json": "11.0.1-beta1"
   },
   "frameworks": {
     "uap10.0.10586": {}
