--- a/src/LagoVista.Core.UWP/project.json
+++ b/src/LagoVista.Core.UWP/project.json
@@ -1,6 +1,6 @@
 ﻿{
   "dependencies": {
-    "LagoVista.Client.Core": "1.2.195-alpha1354",
+    "LagoVista.Client.Core": "1.2.205-alpha1737",
     "LagoVista.Core": "1.2.181-alpha1716",
     "LagoVista.Core.Networking": "1.2.181-alpha1716",
     "LagoVista.IoT.Logging": "1.2.181-alpha1716",
@@ -10,7 +10,7 @@
     "Microsoft.Azure.Mobile.Push": "0.17.1",
     "Microsoft.Azure.ServiceBus": "1.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "6.0.4",
-    "Newtonsoft.Json": "10.0.3"
+    "Newtonsoft.Json": "11.0.1-beta1"
   },
   "frameworks": {
     "uap10.0.10586": {}
