--- a/src/LagoVista.UWP.UI/LagoVista.UWP.UI.csproj
+++ b/src/LagoVista.UWP.UI/LagoVista.UWP.UI.csproj
@@ -111,7 +111,9 @@
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="LagoVista.Core.UWP.UI.snk" />
-    <None Include="Package.nuspec" />
+    <None Include="Package.nuspec">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="project.json" />
   </ItemGroup>
