--- a/src/LagoVista.XPlat.Droid/LagoVista.XPlat.Droid.csproj
+++ b/src/LagoVista.XPlat.Droid/LagoVista.XPlat.Droid.csproj
@@ -64,9 +64,6 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Package.nuspec">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Resources\AboutResources.txt" />
     <AndroidResource Include="Resources\Font\iconizefontawesome.ttf" />
     <AndroidResource Include="Resources\Font\iconizeionicons.ttf" />
@@ -96,10 +93,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Client.Core">
-      <Version>1.2.208-alpha1733</Version>
+      <Version>1.2.211-alpha1243</Version>
+    </PackageReference>
+    <PackageReference Include="LagoVista.Core">
+      <Version>1.2.211-alpha1209</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.MQTT.Core">
-      <Version>1.2.208-alpha1733</Version>
+      <Version>1.2.211-alpha1243</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.Mobile">
       <Version>0.17.1</Version>
@@ -115,6 +115,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.Mobile.Push">
       <Version>0.16.0</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>11.0.1-beta1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
       <Version>2.5.0.121934</Version>
