--- a/src/LagoVista.XPlat.Sample.Droid/packages.config
+++ b/src/LagoVista.XPlat.Sample.Droid/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LagoVista.Client.Core" version="1.2.208-alpha1733" targetFramework="monoandroid80" />
-  <package id="LagoVista.Core" version="1.2.181-alpha1716" targetFramework="monoandroid80" />
+  <package id="LagoVista.Client.Core" version="1.2.211-alpha1243" targetFramework="monoandroid80" />
+  <package id="LagoVista.Core" version="" targetFramework="monoandroid80" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid80" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="monoandroid80" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid80" />
