--- a/src/LagoVista.XPlat.iOS/packages.config
+++ b/src/LagoVista.XPlat.iOS/packages.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LagoVista.Client.Core" version="1.2.208-alpha1733" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core" version="1.2.181-alpha1716" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Networking" version="1.2.181-alpha1716" targetFramework="xamarinios10" />
-  <package id="LagoVista.MQTT.Core" version="1.2.208-alpha1733" targetFramework="xamarinios10" />
-  <package id="LagoVista.UserAdmin" version="1.2.181-alpha1716" targetFramework="xamarinios10" />
+  <package id="LagoVista.Client.Core" version="1.2.211-alpha1243" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core" version="1.2.211-alpha1209" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Networking" version="1.2.211-alpha1209" targetFramework="xamarinios10" />
+  <package id="LagoVista.MQTT.Core" version="1.2.211-alpha1243" targetFramework="xamarinios10" />
+  <package id="LagoVista.UserAdmin.Models" version="1.2.211-alpha1209" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Mobile" version="0.17.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Mobile.Analytics" version="0.17.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Mobile.Crashes" version="0.17.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Mobile.Distribute" version="0.17.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Azure.Mobile.Push" version="0.17.1" targetFramework="xamarinios10" />
-  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="xamarinios10" />
