--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>LagoVista.XPlat</id>
-    <version>1.2.211-alpha1527</version>
+    <version>1.2.211-alpha1828</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -19,6 +19,7 @@
   </metadata>
   <files>
     <file src="src\LagoVista.XPlat.Core\bin\release\netstandard1.3\LagoVista.XPlat.Core.dll" target="lib\netstandard1.3" />
+    <file src="src\LagoVista.XPlat.Core\bin\release\netstandard1.3\LagoVista.XPlat.Core.dll" target="lib\MonoAndroid10" />    
     <file src="src\LagoVista.XPlat.Droid\bin\release\LagoVista.XPlat.Droid.dll" target="lib\MonoAndroid10" />
     <file src="src\LagoVista.XPlat.iOS\bin\release\LagoVista.XPlat.iOS.dll" target="lib\Xamarin.iOS10" />
     <file src="src\LagoVista.XPlat.UWP\bin\Release\LagoVista.XPlat.UWP.dll" target="ref\uap10.0" />
