--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
@@ -146,25 +146,14 @@
     <PackageReference Include="DotNetty.Transport">
       <Version>0.4.7</Version>
     </PackageReference>
-    <PackageReference Include="LagoVista.Client.Core">
-      <Version>
-        1.2.211-alpha1527
-      </Version>
-    </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>
-        1.2.211-alpha1209
-      </Version>
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>
-        1.2.211-alpha1209
-      </Version>      
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>
-        1.2.211-alpha1209
-      </Version>
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.MQTT.Core">
       <Version>
@@ -172,9 +161,7 @@
       </Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>
-        1.2.211-alpha1209
-      </Version>
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.Devices.Client">
       <Version>1.6.0-preview-001</Version>
@@ -201,7 +188,7 @@
       <Version>1.8.1.3</Version>
     </PackageReference>
     <PackageReference Include="WindowsAzure.Storage">
-      <Version>8.6.0</Version>
+      <Version>8.7.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
       <Version>2.5.0.121934</Version>
@@ -235,6 +222,10 @@
     <AndroidResource Include="Resources\values\styles.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\LagoVista.Client.Core\LagoVista.Client.Core.csproj">
+      <Project>{8c0c60f2-8b4e-4796-9853-9f1b7bc2e9bc}</Project>
+      <Name>LagoVista.Client.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\src\LagoVista.XPlat.Core\LagoVista.XPlat.Core.csproj">
       <Project>{8fa51876-7923-4046-a5ce-77057c82675e}</Project>
       <Name>LagoVista.XPlat.Core</Name>
