--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/LagoVista.XPlat.Sample.UWP.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.UWP/LagoVista.XPlat.Sample.UWP.csproj
@@ -178,6 +178,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\src\LagoVista.Client.Core\LagoVista.Client.Core.csproj">
+      <Project>{9eb75b0f-f283-498e-aa42-fb49512aef93}</Project>
+      <Name>LagoVista.Client.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\src\LagoVista.Core.UWP\LagoVista.Core.UWP.csproj">
       <Project>{12f1d893-a53b-44d6-9a9a-2922d9e7e38a}</Project>
       <Name>LagoVista.Core.UWP</Name>
