--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.iOS/packages.config
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.iOS/packages.config
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LagoVista.Client.Core" version="1.2.211-alpha1527" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core" version="" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Authentication" version="" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Networking" version="" targetFramework="xamarinios10" />
-  <package id="LagoVista.UserAdmin" version="" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core" version="1.2.214-alpha1112" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Authentication" version="1.2.214-alpha1112" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Networking" version="1.2.214-alpha1112" targetFramework="xamarinios10" />
+  <package id="LagoVista.UserAdmin.Models" version="1.2.214-alpha1112" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="11.0.1-beta1" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
