--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.iOS/LagoVista.XPlat.Sample.iOS.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.iOS/LagoVista.XPlat.Sample.iOS.csproj
@@ -201,18 +201,6 @@
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="LagoVista.Core, Version=0.8.0.0, Culture=neutral, PublicKeyToken=2698135e9954a85d, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\LagoVista.Core.Networking.1.2.219-alpha1157\lib\netstandard1.2\LagoVista.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="LagoVista.Core.Authentication, Version=0.8.0.0, Culture=neutral, PublicKeyToken=dcf35d1740df1edc, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\LagoVista.Core.Authentication.1.2.219-alpha1157\lib\netstandard1.2\LagoVista.Core.Authentication.dll</HintPath>
-    </Reference>
-    <Reference Include="LagoVista.Core.Networking, Version=0.8.0.0, Culture=neutral, PublicKeyToken=650a46bd96014ff6, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\LagoVista.Core.Networking.1.2.219-alpha1157\lib\netstandard1.2\LagoVista.Core.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="LagoVista.UserAdmin.Models, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\LagoVista.UserAdmin.Models.1.2.219-alpha1157\lib\netstandard1.2\LagoVista.UserAdmin.Models.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Newtonsoft.Json.11.0.1-beta1\lib\netstandard2.0\Newtonsoft.Json.dll</HintPath>
@@ -233,6 +221,21 @@
       <HintPath>..\..\..\packages\Xamarin.Forms.2.5.0.121934\lib\Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="LagoVista.Core.Authentication">
+      <HintPath>..\..\..\packages\LagoVista.Core.Authentication.1.2.219-alpha1648\lib\netstandard1.2\LagoVista.Core.Authentication.dll</HintPath>
+    </Reference>
+    <Reference Include="LagoVista.Core">
+      <HintPath>..\..\..\packages\LagoVista.Core.Networking.1.2.219-alpha1648\lib\netstandard1.2\LagoVista.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="LagoVista.Core.Networking">
+      <HintPath>..\..\..\packages\LagoVista.Core.Networking.1.2.219-alpha1648\lib\netstandard1.2\LagoVista.Core.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="LagoVista.UserAdmin.Models">
+      <HintPath>..\..\..\packages\LagoVista.UserAdmin.Models.1.2.219-alpha1648\lib\netstandard1.2\LagoVista.UserAdmin.Models.dll</HintPath>
+    </Reference>
+    <Reference Include="LagoVista.IoT.Logging">
+      <HintPath>..\..\..\packages\LagoVista.IoT.Logging.1.2.219-alpha1648\lib\netstandard1.2\LagoVista.IoT.Logging.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\LagoVista.Client.Core\LagoVista.Client.Core.csproj">
@@ -250,7 +253,7 @@
       <IsWatchApp>false</IsWatchApp>
     </ProjectReference>
     <ProjectReference Include="..\LagoVista.XPlat.Sample\LagoVista.XPlat.Sample.csproj">
-      <Project>{4c459577-ea4f-4149-a221-afb208bd0903}</Project>
+      <Project>{22E077F4-28B1-46E3-B624-361B6D2A9D4F}</Project>
       <Name>LagoVista.XPlat.Sample</Name>
     </ProjectReference>
   </ItemGroup>
