update rest client

--- a/src/LagoVista.Core.UWP/LagoVista.Core.UWP.csproj
+++ b/src/LagoVista.Core.UWP/LagoVista.Core.UWP.csproj
@@ -113,6 +113,7 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="app.config" />
     <None Include="LagoVista.Core.UI.snk" />
+    <None Include="Package.nuspec" />
     <None Include="packages.config" />
     <None Include="project.json" />
     <Content Include="Assets\Fonts\iconize-entypoplus.ttf">
@@ -242,10 +243,6 @@
     <ProjectReference Include="..\LagoVista.Client.Core\LagoVista.Client.Core.csproj">
       <Project>{d37db80b-93ea-42e3-a05c-a15d35c271d7}</Project>
       <Name>LagoVista.Client.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LagoVista.XPlat.Core\LagoVista.XPlat.Core.csproj">
-      <Project>{d5dd4ca3-3b5c-4a0e-aa82-4cebb9a7160d}</Project>
-      <Name>LagoVista.XPlat.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
