--- a/src/LagoVista.Core.UWP/LagoVista.Core.UWP.csproj
+++ b/src/LagoVista.Core.UWP/LagoVista.Core.UWP.csproj
@@ -205,7 +205,7 @@
     <Compile Include="IconFonts\SimpleLineIconsModule.cs" />
     <Compile Include="IconFonts\TypiconsModule.cs" />
     <Compile Include="IconFonts\WeatherIconsModule.cs" />
-    <Compile Include="Loggers\MobileCenterLogger.cs" />
+    <Compile Include="Loggers\AppCenterLogger.cs" />
     <Compile Include="Networking\WiFiNetwork.cs" />
     <Compile Include="Networking\NetworkBase.cs" />
     <Compile Include="Networking\WiFiNetworks.cs" />
