--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
@@ -94,32 +94,6 @@
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\layout\Toolbar.axml" />
     <AndroidResource Include="Resources\layout\Tabbar.axml" />
-    <AndroidResource Include="Resources\Font\iconizeentypoplus.ttf" />
-    <AndroidResource Include="Resources\Font\iconizefontawesome.ttf" />
-    <AndroidResource Include="Resources\Font\iconizeionicons.ttf" />
-    <AndroidResource Include="Resources\Font\iconizematerial.ttf" />
-    <AndroidResource Include="Resources\Font\iconizemeteocons.ttf" />
-    <AndroidResource Include="Resources\Font\iconizesimplelineicons.ttf" />
-    <AndroidResource Include="Resources\Font\iconizetypicons.ttf" />
-    <AndroidResource Include="Resources\Font\iconizeweathericons.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoBlack.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoBlackItalic.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoBold.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoBoldItalic.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoCondensedBold.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoCondensedBoldItalic.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoCondensedItalic.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoCondensedLight.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoCondensedLightItalic.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoCondensedRegular.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoItalic.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoLight.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoLightItalic.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoMedium.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoMediumItalic.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoRegular.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoThin.ttf" />
-    <AndroidResource Include="Resources\Font\RobotoThinItalic.ttf" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
@@ -147,40 +121,29 @@
       <Version>0.4.7</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>1.2.222-alpha0754</Version>
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>1.2.222-alpha0754</Version>
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>1.2.222-alpha0754</Version>
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.MQTT.Core">
-      <Version>1.2.215-alpha1334</Version>
+      <Version>
+      </Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>1.2.222-alpha0754</Version>
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.Devices.Client">
-      <Version>1.6.0-preview-001</Version>
+      <Version>1.6.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.Devices.Shared">
-      <Version>1.1.1</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Azure.Mobile">
-      <Version>0.17.1</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Azure.Mobile.Analytics">
-      <Version>0.17.1</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Azure.Mobile.Crashes">
-      <Version>0.17.1</Version>
+      <Version>1.4.1</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>4.3.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Azure.Mobile.Distribute">
-      <Version>0.17.1</Version>
+      <Version>4.4.0</Version>
     </PackageReference>
     <PackageReference Include="Portable.BouncyCastle">
       <Version>1.8.1.3</Version>
@@ -189,7 +152,7 @@
       <Version>8.7.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>2.5.0.121934</Version>
+      <Version>2.5.0.122203</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
