--- a/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
+++ b/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
@@ -8,14 +8,18 @@
     <None Remove="Package.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.224-alpha1826" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="1.2.224-alpha1826" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.224-alpha1826" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="1.2.224-alpha1826" />
-    <PackageReference Include="Microsoft.Azure.Mobile" Version="0.17.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta1" />
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.121934" />
-    <PackageReference Include="LagoVista.Core" Version="1.2.224-alpha1826" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.214-alpha1112" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="1.2.214-alpha1112" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.214-alpha1112" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="1.2.214-alpha1112" />
+    <PackageReference Include="Microsoft.AppCenter" Version="1.3.0" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.3.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.3.0" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="1.3.0" />
+    <PackageReference Include="Microsoft.AppCenter.Push" Version="1.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta3" />
+    <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
+    <PackageReference Include="LagoVista.Core" Version="1.2.214-alpha1112" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
