--- a/src/LagoVista.XPlat.Droid/LagoVista.XPlat.Droid.csproj
+++ b/src/LagoVista.XPlat.Droid/LagoVista.XPlat.Droid.csproj
@@ -55,7 +55,7 @@
     <Compile Include="IconFonts\SimpleLineIconsModule.cs" />
     <Compile Include="IconFonts\TypiconsModule.cs" />
     <Compile Include="IconFonts\WeatherIconsModule.cs" />
-    <Compile Include="Loggers\MobileCenterLogger.cs" />
+    <Compile Include="Loggers\AppCenterLogger.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DispatcherServices.cs" />
@@ -72,40 +72,40 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core">
-      <Version>1.2.224-alpha1826</Version>
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>1.2.224-alpha1826</Version>
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>1.2.224-alpha1826</Version>
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>1.2.224-alpha1826</Version>
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>1.2.224-alpha1826</Version>
+      <Version>1.2.214-alpha1112</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Azure.Mobile">
-      <Version>0.17.1</Version>
+    <PackageReference Include="Microsoft.AppCenter">
+      <Version>1.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Azure.Mobile.Analytics">
-      <Version>0.17.1</Version>
+    <PackageReference Include="Microsoft.AppCenter.Analytics">
+      <Version>1.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Azure.Mobile.Crashes">
-      <Version>0.17.1</Version>
+    <PackageReference Include="Microsoft.AppCenter.Crashes">
+      <Version>1.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Azure.Mobile.Distribute">
-      <Version>0.17.1</Version>
+    <PackageReference Include="Microsoft.AppCenter.Distribute">
+      <Version>1.3.0</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Azure.Mobile.Push">
-      <Version>0.16.0</Version>
+    <PackageReference Include="Microsoft.AppCenter.Push">
+      <Version>1.3.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>11.0.1-beta1</Version>
+      <Version>11.0.1-beta3</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>2.5.0.121934</Version>
+      <Version>2.5.0.122203</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
