--- a/src/LagoVista.XPlat.iOS/packages.config
+++ b/src/LagoVista.XPlat.iOS/packages.config
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LagoVista.Core" version="1.2.224-alpha1826" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Authentication" version="1.2.224-alpha1826" targetFramework="xamarinios10" />
-  <package id="LagoVista.Core.Networking" version="1.2.224-alpha1826" targetFramework="xamarinios10" />
-  <package id="LagoVista.IoT.Logging" version="1.2.224-alpha1826" targetFramework="xamarinios10" />
-  <package id="LagoVista.UserAdmin.Models" version="1.2.224-alpha1826" targetFramework="xamarinios10" />
-  <package id="Microsoft.Azure.Mobile" version="0.17.1" targetFramework="xamarinios10" />
-  <package id="Microsoft.Azure.Mobile.Analytics" version="0.17.1" targetFramework="xamarinios10" />
-  <package id="Microsoft.Azure.Mobile.Crashes" version="0.17.1" targetFramework="xamarinios10" />
-  <package id="Microsoft.Azure.Mobile.Distribute" version="0.17.1" targetFramework="xamarinios10" />
-  <package id="Microsoft.Azure.Mobile.Push" version="0.17.1" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core" version="1.2.264-alpha1443" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Authentication" version="1.2.264-alpha1443" targetFramework="xamarinios10" />
+  <package id="LagoVista.Core.Networking" version="1.2.264-alpha1443" targetFramework="xamarinios10" />
+  <package id="LagoVista.IoT.Logging" version="1.2.264-alpha1443" targetFramework="xamarinios10" />
+  <package id="LagoVista.UserAdmin.Models" version="1.2.264-alpha1443" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter" version="1.3.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Analytics" version="1.3.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Crashes" version="1.3.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Distribute" version="1.3.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Push" version="1.3.0" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.4.1" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="xamarinios10" />
-  <package id="Newtonsoft.Json" version="11.0.1-beta1" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="11.0.1-beta3" targetFramework="xamarinios10" />
   <package id="Square.SocketRocket" version="0.5.1" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
@@ -61,8 +61,8 @@
   <package id="System.Threading" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.5.0.122203" targetFramework="xamarinios10" />
 </packages>
