--- a/src/LagoVista.XPlat.UWP/LagoVista.XPlat.UWP.csproj
+++ b/src/LagoVista.XPlat.UWP/LagoVista.XPlat.UWP.csproj
@@ -116,19 +116,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core">
-      <Version>1.2.303-alpha1026</Version>
+      <Version>2.1.346-beta1435</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>1.2.303-alpha1026</Version>
+      <Version>2.1.346-beta1435</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>1.2.303-alpha1026</Version>
+      <Version>2.1.346-beta1435</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>1.2.303-alpha1026</Version>
+      <Version>2.1.346-beta1435</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>1.2.303-alpha1026</Version>
+      <Version>2.1.346-beta1435</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.5</Version>
