--- a/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
+++ b/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
@@ -20,11 +20,11 @@
     <Content Include="Icons\ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="1.2.303-alpha1026" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.303-alpha1026" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="1.2.303-alpha1026" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.303-alpha1026" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="1.2.303-alpha1026" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.346-beta1435" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.346-beta1435" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.346-beta1435" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.346-beta1435" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.346-beta1435" />
     <PackageReference Include="Microsoft.AppCenter" Version="1.7.0" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.7.0" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.7.0" />
