--- a/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
+++ b/src/LagoVista.Client.Core/LagoVista.Client.Core.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <VersionPrefix>1.2</VersionPrefix>
     <TargetFramework>netstandard1.3</TargetFramework>
-    <NetStandardImplicitPackageVersion>2.0.1</NetStandardImplicitPackageVersion>
+    <NetStandardImplicitPackageVersion>2.0.3</NetStandardImplicitPackageVersion>
     <SignAssembly>true</SignAssembly>
     <DelaySign>False</DelaySign>
     <DebugType>Full</DebugType>
@@ -20,16 +20,16 @@
     <Content Include="Icons\ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="2.1.393-beta1324" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.393-beta1324" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.393-beta1324" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.393-beta1324" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.393-beta1324" />
-    <PackageReference Include="Microsoft.AppCenter" Version="1.7.0" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.7.0" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.7.0" />
-    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="1.7.0" />
-    <PackageReference Include="Microsoft.AppCenter.Push" Version="1.7.0" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.439-beta1607" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.439-beta1607" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.439-beta1607" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.439-beta1607" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.439-beta1607" />
+    <PackageReference Include="Microsoft.AppCenter" Version="1.8.0" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.8.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.8.0" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="1.8.0" />
+    <PackageReference Include="Microsoft.AppCenter.Push" Version="1.8.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
   <ItemGroup>
