--- a/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
+++ b/src/LagoVista.XPlat.Core/LagoVista.XPlat.Core.csproj
@@ -1,25 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.3</TargetFramework>
-    <NetStandardImplicitPackageVersion>2.0.1</NetStandardImplicitPackageVersion>
+    <NetStandardImplicitPackageVersion>2.0.3</NetStandardImplicitPackageVersion>
     <DebugType>Full</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Package.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.393-beta1324" />
-    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.393-beta1324" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.393-beta1324" />
-    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.393-beta1324" />
-    <PackageReference Include="Microsoft.AppCenter" Version="1.7.0" />
-    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.7.0" />
-    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.7.0" />
-    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="1.7.0" />
-    <PackageReference Include="Microsoft.AppCenter.Push" Version="1.7.0" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.439-beta1607" />
+    <PackageReference Include="LagoVista.Core.Networking" Version="2.1.439-beta1607" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.439-beta1607" />
+    <PackageReference Include="LagoVista.UserAdmin.Models" Version="2.1.439-beta1607" />
+    <PackageReference Include="Microsoft.AppCenter" Version="1.8.0" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.8.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.8.0" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="1.8.0" />
+    <PackageReference Include="Microsoft.AppCenter.Push" Version="1.8.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="Xamarin.Forms" Version="3.1.0.637273" />
-    <PackageReference Include="LagoVista.Core" Version="2.1.393-beta1324" />
+    <PackageReference Include="Xamarin.Forms" Version="3.2.0.637442-pre1" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.439-beta1607" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.Client.Core\LagoVista.Client.Core.csproj" />
