--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
@@ -16,8 +16,7 @@
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
@@ -111,61 +110,23 @@
     <Folder Include="Resources\mipmap-xxxhdpi\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="DotNetty.Codecs.Mqtt">
-      <Version>0.4.7</Version>
-    </PackageReference>
-    <PackageReference Include="DotNetty.Handlers">
-      <Version>0.4.7</Version>
-    </PackageReference>
-    <PackageReference Include="DotNetty.Transport">
-      <Version>0.4.7</Version>
-    </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-<<<<<<< HEAD
-      <Version>1.2.181-alpha1716</Version>
+      <Version>2.1.439-beta1607</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>1.2.181-alpha1716</Version>
+      <Version>2.1.439-beta1607</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>1.2.181-alpha1716</Version>
-    </PackageReference>
-    <PackageReference Include="LagoVista.MQTT.Core">
-      <Version>1.2.208-alpha1733</Version>
-=======
-      <Version>1.2.214-alpha1112</Version>
-    </PackageReference>
-    <PackageReference Include="LagoVista.Core.Networking">
-      <Version>1.2.214-alpha1112</Version>
-    </PackageReference>
-    <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>1.2.214-alpha1112</Version>
-    </PackageReference>
-    <PackageReference Include="LagoVista.MQTT.Core">
-      <Version>
-      </Version>
->>>>>>> e3cd94e7cb8f086f2f36676ab9f24e768b7c34c9
+      <Version>2.1.439-beta1607</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>1.2.214-alpha1112</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Azure.Devices.Client">
-      <Version>1.6.2</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Azure.Devices.Shared">
-      <Version>1.4.1</Version>
+      <Version>2.1.439-beta1607</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
       <Version>4.4.0</Version>
     </PackageReference>
-    <PackageReference Include="Portable.BouncyCastle">
-      <Version>1.8.1.3</Version>
-    </PackageReference>
-    <PackageReference Include="WindowsAzure.Storage">
-      <Version>8.7.0</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>2.5.0.122203</Version>
+      <Version>3.1.0.697729</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
