--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.iOS/LagoVista.XPlat.Sample.iOS.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.iOS/LagoVista.XPlat.Sample.iOS.csproj
@@ -98,7 +98,9 @@
     <Compile Include="AppDelegate.cs" />
     <None Include="app.config" />
     <None Include="Entitlements.plist" />
-    <None Include="Info.plist" />
+    <None Include="Info.plist">
+      <SubType>Designer</SubType>
+    </None>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <ITunesArtwork Include="iTunesArtwork" />
     <ITunesArtwork Include="iTunesArtwork@2x" />
@@ -264,6 +266,9 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\nuviot.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\appicon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
